--- a/exercicios.html
+++ b/exercicios.html
@@ -6,7 +6,7 @@
     </head>
         <body>
             <image src="imagens/rivi.png" alt="RIVI Tecnologia" width="10%" height="10%"></image>
-            <h1>Exercícios Teste GitHub</h1>
+            <h1>Exercícios Teste</h1>
             <b></b>
             <h5>RIVI Tecnologia</h5>
             <p style="justify-content: center;">A RIVI Tecnologia é uma empresa dedicada a proporcionar produtos e serviços de alta qualidade. Desde nossa fundação em janeiro de 2014 na cidade de Uberlândia - MG, temos nos comprometido a oferecer inovação, excelência e atendimento ao cliente. Nossa equipe é formada por profissionais experientes e dedicados, que estão sempre prontos para atender às necessidades de nossos clientes.</p></p>
